# headease-homemonitoring-poc

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  chain-header.json  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  fhir_routes.py  http_client.py  main.py  main_admin.py  main_fhir.py  nvi.py  nvi_nk.py  oauth.py  pseudonymisation.py  registration.py  seeder.py  token_endpoint.py  token_store.py
docs/: DATA-USER-GUIDE.md  SCRIPT.md  nuts-knooppunt-delete-fix.md  nuts-knooppunt-fixes.md
helm/headease-homemonitoring/: Chart.yaml  values.yaml
helm/headease-homemonitoring/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hapi.yaml  ingress.yaml  secret.yaml  service.yaml
scripts/: cleanup-lrza.sh  data-user.py  data-user.sh
terraform/: README.md  backend.tf  cert-manager.tf  cloud-sql.tf  cluster.tf  ingress.tf  main.tf  nuts-knooppunt-values.yaml.tpl  nuts-knooppunt.tf  outputs.tf  providers.tf  terraform.tfvars.example  values.yaml.tpl  variables.tf  version.tf
